# sumotde

./: README.md  duaIteratev3.py
client/: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml
client/backend/: models.py  routing.py  urls.py
client/backend/management/commands/: msvc.py
client/client/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
fileserver/: TODO.md  main.py  plot1.py  plot2.py  pyproject.toml  test_optimize.py
fileserver/backend/: EstimatorOptions.py  consumers.py  fields.py  models.py  routing.py  urls.py  utils.py
fileserver/backend/migrations/: 0001_initial.py
fileserver/backend/networks/: NetworkConverter.py  networks.py
fileserver/fileserver/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
fileserver/images/: logs.txt
fileserver/input_files/network/: sumo-grid-network-od132.det.xml  sumo-grid-network-od132.net.xml  sumo-grid-network-od132.taz.xml  sumo-grid-network-od132_100.det_subset.xml
fileserver/static/_09fe330b-397c-458e-9dbc-ae0c1f3c51cd/: config.json
fileserver/static/_8c5129e3-9f38-433e-951f-13a89adf774f/: sample_metadata.json
fileserver/static/_run05/: gradient-assignmat_seedmat07.json  gradient-spsa_seedmat07.json  gradient-spsa_seedmat09.json  surrogate-knn-simdata_output_None.json  surrogate-knn-simdata_output_seedmat09.json
fileserver/static/run05/: gradient-assignmat_None.json  gradient-assignmat_seedmat09.json  gradient-spsa_None.json  surrogate-fnn-simdata_output_None.json  surrogate-fnn-simdata_output_seedmat07.json  surrogate-fnn-simdata_output_seedmat09.json  (+1 more)
(+1919 files in other folders)
